# echelon

./: .gitignore  .travis.yml  CMakeLists.txt  CNAME  Readme.md  Readme.txt  circle.yml  download.html  feed.xml  index.html  params.json  sitemap.xml
cmake/: EnableCoverage.cmake  FindEchelon.cmake  FindSphinx.cmake  echelon-config.cmake  generate_imported_library_targets.cmake
css/: echelon.css  jumbotron.css
doc/: Doxyfile.in  getting_started.dox  mainpage.dox  tutorial_basic_access.dox  tutorial_introduction.dox
doc/api_doc/: Eigen3_8hpp_source.html  adapt__type_8hpp_source.html  all__integral_8hpp_source.html  annotated.html  array__slice_8hpp_source.html  attribute_8hpp_source.html  attribute__repository_8hpp_source.html  broken__contract__exception_8hpp_source.html  classechelon_1_1attribute-members.html  classechelon_1_1attribute.html  classechelon_1_1attribute__repository-members.html  classechelon_1_1attribute__repository.html  classechelon_1_1dataset-members.html  classechelon_1_1dataset.html  classechelon_1_1dataset__dimensions-members.html  classechelon_1_1dataset__dimensions.html  classechelon_1_1dataset__options-members.html  classechelon_1_1dataset__options.html  classechelon_1_1dimension-members.html  classechelon_1_1dimension.html  classechelon_1_1dimension__scale-members.html  classechelon_1_1dimension__scale.html  classechelon_1_1file-members.html  classechelon_1_1file.html  classechelon_1_1group-members.html  classechelon_1_1group.html  classechelon_1_1hdf5_1_1attribute-members.html  classechelon_1_1hdf5_1_1attribute.html  classechelon_1_1hdf5_1_1attribute__repository-members.html  classechelon_1_1hdf5_1_1attribute__repository.html  classechelon_1_1hdf5_1_1broken__contract__exception-members.html  classechelon_1_1hdf5_1_1broken__contract__exception.html  classechelon_1_1hdf5_1_1dataset-members.html  classechelon_1_1hdf5_1_1dataset.html  classechelon_1_1hdf5_1_1dataset__dimensions-members.html  classechelon_1_1hdf5_1_1dataset__dimensions.html  classechelon_1_1hdf5_1_1dataset__options-members.html  classechelon_1_1hdf5_1_1dataset__options.html  classechelon_1_1hdf5_1_1dimension-members.html  classechelon_1_1hdf5_1_1dimension.html  (+172 more)
doc/api_doc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  (+24 more)
doc/user-guide/: about_echelon.rst  conf.py.in  file_format_specification.rst  getting_started.rst  index.rst  style_guide.rst  tutorial_introduction.rst
doc/user_guide/: .buildinfo  about_echelon.html  file_format_specification.html  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js  tutorial_introduction.html
doc/user_guide/_sources/: index.txt
echelon/: adapt_type.hpp  attribute.hpp  attribute_repository.hpp  broken_contract_exception.hpp  container_adaption.hpp  creation_mode.hpp  customization_hooks.hpp  data_transfer_broker.hpp  dataset.hpp  dataset_dimensions.hpp  dimension_scale.hpp  echelon.hpp  file.hpp  grid.hpp  group.hpp  hdf5_type_oarchive.hpp  keywords.hpp  link.hpp  multi_array.hpp  multi_array_adaptor.hpp  not_implemented_exception.hpp  object.hpp  object_reference.hpp  primitive_type.hpp  range.hpp  scalar_dataset.hpp  sink_adaptors.hpp  slice.hpp  static_type_layout.hpp  type.hpp  type_factory.hpp  type_traits.hpp  type_traits_fwd.hpp  utility.hpp  uuid.hpp
echelon/detail/: all_integral.hpp  map_indices.hpp  nested_for_each.hpp
echelon/hdf5/: adapt_type.hpp  array_slice.hpp  attribute.hpp  attribute_repository.hpp  broken_contract_exception.hpp  container_adaption.hpp  customization_hooks.hpp  data_transfer_broker.hpp  dataset.hpp  dataset_dimensions.hpp  dataspace.hpp  dimension_scale.hpp  dynamic_table.hpp  echelon.hpp  error_handling.hpp  file.hpp  group.hpp  handle.hpp  link.hpp  not_implemented_exception.hpp  object.hpp  object_reference.hpp  packet_table.hpp  property_list.hpp  range.hpp  scalar_dataset.hpp  slice.hpp  static_type_layout.hpp  storage_layer.hpp  type.hpp  type_factory.hpp  type_traits.hpp  type_traits_fwd.hpp  utility.hpp
echelon/hdf5/precursor/: attribute.hpp  dataset.hpp  dataspace.hpp  dimension_scale.hpp  error_handling.hpp  file.hpp  group.hpp  handle.hpp  object.hpp  object_reference.hpp  property_list.hpp  (+1 more)
echelon/std/: complex.hpp  stl_support.hpp  vector.hpp
echelon/support/: column_major_storage_order.hpp  multi_array.hpp  multi_array_adapter.hpp  multi_array_adaptor.hpp  multi_array_view.hpp
echelon/utility/: function_options.hpp  macros.hpp
examples/: CMakeLists.txt  example1.cpp
src/: CMakeLists.txt  attribute.cpp  dataset.cpp  dataset_dimensions.cpp  dimension_scale.cpp  file.cpp  group.cpp  hdf5_type_oarchive.cpp  link.cpp  object.cpp  object_reference.cpp  scalar_dataset.cpp  slice.cpp  type.cpp  utility.cpp  uuid.cpp
src/hdf5/: CMakeLists.txt  attribute.cpp  dataset.cpp  dataset_dimensions.cpp  dataspace.cpp  dimension_scale.cpp  dynamic_table.cpp  error_handling.cpp  file.cpp  group.cpp  handle.cpp  link.cpp  object.cpp  object_reference.cpp  packet_table.cpp  property_list.cpp  scalar_dataset.cpp  slice.cpp  type.cpp  utility.cpp
src/hdf5/precursor/: attribute.cpp  dataset.cpp  dataspace.cpp  dimension_scale.cpp  error_handling.cpp  file.cpp  group.cpp  handle.cpp  object.cpp  object_reference.cpp  property_list.cpp  type.cpp
tests/: CMakeLists.txt  array_slicing.cpp  basic_fixture.hpp  basic_io.cpp  creation_and_access.cpp  dynamic_shape.cpp  error_handling.cpp  layout_handling.cpp  null_state.cpp  object_reference_handling.cpp  require_api.cpp  sink_adaptors.cpp  slicing.cpp  string_support.cpp  type_equality.cpp
tests/regression/: CMakeLists.txt  static_shape_writeable.cpp
(+4 files in other folders)
